Fix burger menu collapse

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -5,4 +5,12 @@
     top: 50%;
     left: 100%;
   }
+
+  @media (max-width: 768px) {
+    &__badge {
+      top: 0;
+      left: 0;
+      transform: translate(50%, -50%);
+    }
+  }
 }
